se genero el link de index1 al 2

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link active" aria-current="page" href="#"
                 >Kinesiologia</a
               >
-              <a class="nav-link" href="#">Quiropraxia</a>
+              <a class="nav-link" href="./index2.html">Quiropraxia</a>
               <a class="nav-link" href="#">Osteopatia</a>
               <a class="nav-link" href="#">Suscribite</a>
               <a class="nav-link" href="#">Contacto</a>
