--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
    <section>
 <hr>
   <div class="Sesionkinesio">
-    <h1 class="h1">Sesión de Kinesiologia</h1>
+    <h2 class="h1">Como es una sesión con nosotros </h2>
   </div>
   <hr>
   <div>
