termino de tp 3 falta el sass

--- a/index4.html
+++ b/index4.html
@@ -45,13 +45,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="./index2.html"
                 >Kinesiologia</a
               >
-              <a class="nav-link" href="#">Quiropraxia</a>
-              <a class="nav-link" href="#">Osteopatia</a>
-              <a class="nav-link" href="#">Suscribite</a>
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="./index3.html">Quiropraxia</a>
+              <a class="nav-link" href="./index4.html">Osteopatia</a>
+              <a class="nav-link" href="./index5.html">Suscribite</a>
+              <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
       </div>
       <hr>
       </main>
-      <h4 class="h4"><a href="about:blank" target="_blank">Siguiente</a></h4>
+      <h4 class="h4"><a href="./index5.html" target="Suscripción">Siguiente</a></h4>
       </footer>
   
       <script
