--- a/pages/index5.html
+++ b/pages/index5.html
@@ -17,7 +17,7 @@
     <header>
         <h1>Forma parte de nuestra comunidad </h1>
     </header>
-    <body class="body2">  
+    <body class="body">  
     <main>
     <form class="row g-4">
   <div class="col-md-4">
