final del proyecto 3

--- a/pages/index5.html
+++ b/pages/index5.html
@@ -1,77 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      class="Logo1"
-      href="./logo.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="./assets/css/estilo.css" />
-  
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>LrKinesio</title>
-    <header>
-        <h1>Forma parte de nuestra comunidad </h1>
-    </header>
-    <body class="body">  
-    <main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/css/estilo.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+  <title>LrKinesio</title>
+  <header>
+    <h1 class="Titutlo">Forma parte de nuestra comunidad </h1>
+  </header>
+
+<body class="bodys2">
+  <main>
     <form class="row g-4">
-  <div class="col-md-4">
-    <label for="inputEmail4" class="form-label">Email</label>
-    <input type="email" class="form-control" id="inputEmail4">
-  </div>
-  <div class="col-md-4">
-    <label for="inputPassword4" class="form-label">Password</label>
-    <input type="password" class="form-control" id="inputPassword4">
-  </div>
-  <div class="col-4">
-    <label for="inputAddress" class="form-label">Direccion</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="">
-  </div>
-  <div class="col-4">
-    <label for="inputAddress2" class="form-label">Trabajo</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="">
-  </div>
-  <div class="col-md-4">
-    <label for="inputCity" class="form-label">Cuidad</label>
-    <input type="text" class="form-control" id="inputCity">
-  </div>
-  <div class="col-md-4">
-    <label for="inputState" class="form-label">Pais</label>
-    <select id="inputState" class="form-select">
-      <option selected></option>
-      <option>Argentina</option>
-      <option>Brasil</option>
-      <option>Uruguay</option>
-    </select>
-  </div>
-  <div class="col-md-4">
-    <label for="inputZip" class="form-label">Celular</label>
-    <input type="text" class="form-control" id="inputZip">
-  </div>
-  <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <div class="col-4">
-    <button type="submit" class="btn btn-primary">Inscribirme</button>
-  </div>
-</form>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <div class="col-md-4">
+        <label for="inputEmail4" class="form-label">Email</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+      <div class="col-md-4">
+        <label for="inputPassword4" class="form-label">Password</label>
+        <input type="password" class="form-control" id="inputPassword4">
+      </div>
+      <div class="col-4">
+        <label for="inputAddress" class="form-label">Direccion</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="">
+      </div>
+      <div class="col-4">
+        <label for="inputAddress2" class="form-label">Trabajo</label>
+        <input type="text" class="form-control" id="inputAddress2" placeholder="">
+      </div>
+      <div class="col-md-4">
+        <label for="inputCity" class="form-label">Cuidad</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+      <div class="col-md-4">
+        <label for="inputState" class="form-label">Pais</label>
+        <select id="inputState" class="form-select">
+          <option selected></option>
+          <option>Argentina</option>
+          <option>Brasil</option>
+          <option>Uruguay</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label for="inputZip" class="form-label">Celular</label>
+        <input type="text" class="form-control" id="inputZip">
+      </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="gridCheck">
+          <label class="form-check-label" for="gridCheck">
+            Check me out
+          </label>
+        </div>
+      </div>
+      <div class="col-4">
+        <button type="submit" class="btn btn-primary">Inscribirme</button>
+      </div>
+    </form>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 <footer>
-    <h3>¡Gracias por elegirnos!</h3>
-    <h4><a href="./index.html">Menu</a></h4>
+  <h3>¡Gracias por elegirnos!</h3>
+  <h4 class="h4"><a href="/index.html">Menu</a></h4>
 </footer>
 
 </body>
+
 </html>
