--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="bodys">
   <header>
-    <img src="./assets/images/LRKINESIO.png" class="Logo2" alt="Logo2" />
+    <img src="./assets/images/LRKINESIO.png"alt="Logo2" />
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
@@ -27,10 +27,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./index2.html">Kinesiologia</a>
-            <a class="nav-link" href="./index3.html">Quiropraxia</a>
-            <a class="nav-link" href="./index4.html">Osteopatia</a>
-            <a class="nav-link" href="./index5.html">Suscribite</a>
+            <a class="nav-link active" aria-current="page" href="./pages/index2.html">Kinesiologia</a>
+            <a class="nav-link" href="/pages/index3.html">Quiropraxia</a>
+            <a class="nav-link" href="/pages/index4.html">Osteopatia</a>
+            <a class="nav-link" href="/pages/index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
           </div>
         </div>
@@ -75,20 +75,20 @@
     <hr>
 
   </main>
-    <footer>
-      <div class="parrafofinal">
+  <footer>
+    <div class="parrafofinal">
 
-        <h4>
-          ¿Qué estás esperando? comunicate con nosotros a través de nuestras redes
-          sociales o vía whatsapp
+      <h4>
+        ¿Qué estás esperando? comunicate con nosotros a través de nuestras redes
+        sociales o vía whatsapp
 
-        </h4>
+      </h4>
 
 
-      </div>
-      <hr>
-    
-  <h4 class="h4"><a href="./index2.html" target="Kinesiologia">Siguiente</a></h4>
+    </div>
+    <hr>
+
+    <h4 class="h4"><a href="/pages/index2.html" target="Kinesiologia">Siguiente</a></h4>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
