--- a/pages/index5.html
+++ b/pages/index5.html
@@ -68,7 +68,7 @@
 </body>
 <footer>
   <h3>¡Gracias por elegirnos!</h3>
-  <h4 class="h4"><a href="/index.html">Menu</a></h4>
+  <h4 class="h4"><a href="/">Menu</a></h4>
 </footer>
 
 </body>
