--- a/pages/index2.html
+++ b/pages/index2.html
@@ -7,7 +7,7 @@
   <meta name="description"content="Sesiones de Kinesiologia">
   <meta name= "Keywords"content=" Rehabilitaciones">
   <link rel="shortcut icon" href="/assets/images/logo.png" type="image/x-icon" />
-  <link rel="stylesheet" href="/assets/css/estilo.css" />
+  <link rel="stylesheet" href="./assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="shortcut icon" href="../assets/images/LRKINESIO.png" type="image/x-icon">
