correcciones de index

--- a/pages/index4.html
+++ b/pages/index4.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"content="Sesiones Osteopatia">
   <meta name= "Keywords"content="falta de fuerza en las articulaciones">
-  <link rel="stylesheet" href="../assets/css/estilo.css" />
+  <link rel="stylesheet" href="./assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 
   <title>LrKinesio</title>
 </head>
 
 <body class="bodys">
   <header>
-    <img src="../assets/images/LRKINESIO.png" alt="Logo2" />
+    <img src="./assets/images/LRKINESIO.png" alt="Logo2" />
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
@@ -28,10 +28,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./index2.html">Kinesiologia</a>
-            <a class="nav-link" href="./index3.html">Quiropraxia</a>
-            <a class="nav-link" href="./index4.html">Osteopatia</a>
-            <a class="nav-link" href="./index5.html">Suscribite</a>
+            <a class="nav-link active" aria-current="page" href="/pages/index2.html">Kinesiologia</a>
+            <a class="nav-link" href="pages/index3.html">Quiropraxia</a>
+            <a class="nav-link" href="/pages/index4.html">Osteopatia</a>
+            <a class="nav-link" href="/pages/index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
           </div>
         </div>
