--- a/pages/index5.html
+++ b/pages/index5.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"content="Inscribirme">
   <meta name= "Keywords"content="Queres conocernos">
-  <link rel="stylesheet" href="../assets/css/estilo.css" />
+  <link rel="stylesheet" href="./assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
   <title>LrKinesio</title>
   <header>
     <h1 class="Titutlo">Forma parte de nuestra comunidad </h1>
@@ -70,7 +70,7 @@
 </body>
 <footer>
   <h3>¡Gracias por elegirnos!</h3>
-  <h4 class="h4"><a href="/">Menu</a></h4>
+  <h4 class="h4"><a href="/index.html">Menu</a></h4>
 </footer>
 
 </body>
