--- a/pages/index2.html
+++ b/pages/index2.html
@@ -29,10 +29,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/pages/index2.html">Kinesiologia</a>
-            <a class="nav-link" href="/pages/index3.html">Quiropraxia</a>
-            <a class="nav-link" href="/pages/index4.html">Osteopatia</a>
-            <a class="nav-link" href="/pages/index5.html">Suscribite</a>
+            <a class="nav-link active" aria-current="page" href="./pages/index2.html">Kinesiologia</a>
+            <a class="nav-link" href="./pages/index3.html">Quiropraxia</a>
+            <a class="nav-link" href="./pages/index4.html">Osteopatia</a>
+            <a class="nav-link" href="./index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
           </div>
         </div>
@@ -114,7 +114,7 @@
   
   <h4 class="h4"><a href="/pages/index3.html" target="Osteopatia">Siguiente</a></h4>
   </footer>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
