--- a/pages/index4.html
+++ b/pages/index4.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="/pages/index2.html">Kinesiologia</a>
-            <a class="nav-link" href="pages/index3.html">Quiropraxia</a>
+            <a class="nav-link" href="/pages/index3.html">Quiropraxia</a>
             <a class="nav-link" href="/pages/index4.html">Osteopatia</a>
             <a class="nav-link" href="/pages/index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
@@ -110,7 +110,7 @@
 
     </div>
     <hr>
-    <h4 class="h4"><a href="./index5.html" target="Suscripción">Siguiente</a></h4>
+    <h4 class="h4"><a href="." target="Suscripción">Siguiente</a></h4>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
