--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"content="Sesiones de Kinesiologia, Quiropraxia, Osteopatia y mas">
   <meta name= "Keywords"content="Dolores de espalda, Rehabilitaciones, falta de fuerza en las articulaciones">
   <link rel="shortcut icon" href="./logo.png" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/estilo.css" />
+  <link rel="stylesheet" href="/assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
@@ -17,7 +17,7 @@
 
 <body class="bodys">
   <header>
-    <img src="./assets/images/LRKINESIO.png"alt="Logo2" />
+    <img src="/assets/images/LRKINESIO.png"alt="Logo2" />
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
