--- a/pages/index3.html
+++ b/pages/index3.html
@@ -7,7 +7,7 @@
   <meta name="description"content="Sesiones Quiropraxia">
   <meta name= "Keywords"content="Dolores de espalda">
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/estilo.css" />
+  <link rel="stylesheet" href="../assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   
@@ -17,7 +17,7 @@
 
 <body class="bodys">
   <header>
-    <img src="./assets/images/LRKINESIO.png" alt="Logo2" />
+    <img src="../assets/images/LRKINESIO.png" alt="Logo2" />
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
@@ -29,10 +29,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/pages/index2.html">Kinesiologia</a>
-            <a class="nav-link" href="/pages/index3.html">Quiropraxia</a>
-            <a class="nav-link" href="/pages/index4.html">Osteopatia</a>
-            <a class="nav-link" href="/pages/index5.html">Suscribite</a>
+            <a class="nav-link active" aria-current="page" href="../pages/index2.html">Kinesiologia</a>
+            <a class="nav-link" href="../pages/index3.html">Quiropraxia</a>
+            <a class="nav-link" href="../pages/index4.html">Osteopatia</a>
+            <a class="nav-link" href="../pages/index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
           </div>
         </div>
@@ -107,7 +107,7 @@
     </div>
     <hr>
 
-    <h4 class="h4"><a href="/pages/index4.html" target="Quiropraxia">Siguiente</a></h4>
+    <h4 class="h4"><a href="../pages/index4.html" target="Quiropraxia">Siguiente</a></h4>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
