--- a/pages/index2.html
+++ b/pages/index2.html
@@ -17,7 +17,7 @@
 
 <body class="bodys">
   <header>
-    <img src="../assets/images/LRKINESIO.png"alt="Logo2"/>
+    <img src="./assets/images/LRKINESIO.png"alt="Logo2"/>
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
