--- a/pages/index4.html
+++ b/pages/index4.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="../assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
 
   <title>LrKinesio</title>
 </head>
 
 <body class="bodys">
   <header>
-    <img src="./assets/images/LRKINESIO.png" alt="Logo2" />
+    <img src="../assets/images/LRKINESIO.png" alt="Logo2" />
   </header>
   <main>
     <nav class="navbar bg-dark border-bottom border-body col-12" data-bs-theme="dark">
