--- a/pages/index5.html
+++ b/pages/index5.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../assets/css/estilo.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+   <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
   <title>LrKinesio</title>
   <header>
     <h1 class="Titutlo">Forma parte de nuestra comunidad </h1>
