--- a/pages/index2.html
+++ b/pages/index2.html
@@ -31,7 +31,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="./index2.html">Kinesiologia</a>
             <a class="nav-link" href="./index3.html">Quiropraxia</a>
-            <a class="nav-link" href="./index4.html">Osteopatia</a>
+            <a class="nav-link" href="./index4.html">Osteopatía</a>
             <a class="nav-link" href="./index5.html">Suscribite</a>
             <a class="nav-link" href="https://www.instagram.com/lrkinesio/">Contacto</a>
           </div>
