--- a/pages/index4.html
+++ b/pages/index4.html
@@ -40,7 +40,7 @@
     <hr />
     <div class="container">
       <section>
-        <h1 class="h1">¿Que es la Osteopatia?</h1>
+        <h1 class="h1">¿Que es la Osteopatía?</h1>
 
         <div class="grid text-center">
           <div class="g-col-6 parrafoquiro">
@@ -85,7 +85,7 @@
     <section>
       <hr>
       <div class="Sesionkinesio">
-        <h2 class="Titulo">Sesión de Osteopatia</h2>
+        <h2 class="Titulo">Sesión de Osteopatía</h2>
       </div>
       <hr>
       <div class="videoquiropraxia">
