--- a/pages/index5.html
+++ b/pages/index5.html
@@ -27,7 +27,7 @@
         <input type="password" class="form-control" id="inputPassword4">
       </div>
       <div class="col-4">
-        <label for="inputAddress" class="form-label">Direccion</label>
+        <label for="inputAddress" class="form-label">Dirección</label>
         <input type="text" class="form-control" id="inputAddress" placeholder="">
       </div>
       <div class="col-4">
