--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="bodys">
+  <script src="./assets/js/script.js"></script>
   <header>
     <img src="./assets/images/LRKINESIO.png"alt="Logo2" />
   </header>
