--- a/pages/index5.html
+++ b/pages/index5.html
@@ -11,6 +11,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
   <title>LrKinesio</title>
+  </head>
   <header>
     <h1 class="Titutlo">Forma parte de nuestra comunidad </h1>
   </header>
@@ -67,12 +68,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 <footer>
   <h3>¡Gracias por elegirnos!</h3>
   <h4 class="h4"><a href="../index.html">Menú</a></h4>
 </footer>
 
-</body>
 
 </html>
